implement ns join
